Fix current time layout problem

--- a/src/Addition/Addition.css
+++ b/src/Addition/Addition.css
@@ -3,10 +3,10 @@
     display: flex;
     width: max-content;
     align-items: center;
-    transform: translateY(-.6rem) translateX(calc(-.6rem + 2px));
+    transform: translateY(-1rem) translateX(calc(-.6rem + 2px));
     font-family: 'Open Sans', sans-serif;
     color: #444;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-weight: 600;
 
     transition: all .5s;
